refactoring; add validations to the update method; fix bug

--- a/app/views/users/_group_to_user.html.erb
+++ b/app/views/users/_group_to_user.html.erb
@@ -1,4 +1,4 @@
-<% if !@user.errors.messages[:groups].empty? %>
+<% if !@user.errors.empty? %>
    <% @user.errors.messages[:groups].each do |message| %>
         <div class="alert alert-danger" role="alert"><%=message%></div>
    <% end %>
